--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -142,7 +142,7 @@
 	
 		.wrapper.first
 		{
-			padding: 6em 0 0 0;
+			padding: 6em 0 2em 0;
 		}
 
 /*********************************************************************************/
@@ -196,7 +196,7 @@
 
 		#top h1
 		{
-			margin-top: 0.35em;
+/*			margin-top: 0.35em;*/
 		}
 	
 		#top p
